<resources>
    <string name="app_name"> Máy nghe nhạc </string>
    <string name="account">Tài Khoản</string>
    <string name="password">Mật Khẩu</string>
    <string name="forgetpass">Quên mật khẩu?</string>
    <string name="guestlogin">Đăng nhập với tư cách khách vãng lai!</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="username">Tên đăng nhập</string>
    <string name="repassword">Nhập lại mật khẩu</string>
    <string name="playlist">Danh sách phát</string>
    <string name="createpls">Tạo danh sách phát</string>
    <string name="lib">Thư viện</string>
    <string name="song">Bài hát</string>
    <string name="singer">Ca sĩ</string>
    <string name="mv">MV</string>
    <string name="upload">Tải lên</string>
    <string name="download">Tải xuống</string>
    <string name="personal">Cá nhân</string>
    <string name="service">Dịch vụ</string>
    <string name="search">Tìm kiếm</string>
    <string name="delete">Xóa</string>
    <string name="add">Thêm</string>
    <string name="repair">Sửa</string>
    <string name="like">Yêu thích</string>
<!--    Lỗi ở đây-->
    <string name="btn_notification">Thông báo</string>
    <string name="btn_hobby">Sở thích âm nhạc</string>
    <string name="btn_playList">Danh sách quan tâm</string>
    <string name="btn_vipPlayer">Mua VIP</string>
    <string name="btn_logOut">Đăng xuất</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="information">Thông tin</string>

<!--    //rank_activity-->
    <string name="rank">Xếp hạng</string>

<!--    //play_music_activity-->
    <string name="name_music">Tên bài hát</string>
    <string name="id_music">ID bài hát</string>


</resources>