<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow">


    <ImageButton
        android:id="@+id/image_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/image_oval"
        android:layout_margin="10dp"
        ></ImageButton>

    <TextView
        android:id="@+id/name_user"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toRightOf="@id/image_user"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="Name user"
        android:textSize="30dp"
        android:textColor="@color/string_blue"
        android:layout_margin="10dp"

        ></TextView>

    <View
        android:id="@+id/bar1"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_user"
        android:background="@color/string_blue"
        android:layout_marginTop="10dp"
        ></View>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar1"
        android:text="@string/personal"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/string_blue"
        android:layout_marginLeft="10dp"
        ></TextView>

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_notification"
        android:textSize="20dp"
        ></Button>

    <Button
        android:id="@+id/btn_hobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_notification"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_hobby"
        android:textSize="20dp"
        ></Button>

    <Button
        android:id="@+id/btn_playList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_hobby"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_playList"
        android:textSize="20dp"
        ></Button>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_playList"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/string_blue"
        android:layout_marginLeft="10dp"
        ></TextView>

    <Button
        android:id="@+id/btn_vipPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_vipPlayer"
        android:textSize="20dp"
        ></Button>

    <View
        android:id="@+id/bar2"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_vipPlayer"
        android:background="@color/string_blue"
        android:layout_marginTop="10dp"
        ></View>

    <Button
        android:id="@+id/btn_logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_logOut"
        android:textSize="20dp"
        ></Button>





</androidx.constraintlayout.widget.ConstraintLayout>