<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_drawable"
    android:layout_gravity="center"
    >
    <TextView
        android:id="@+id/signup_tv_sigup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/signup"
        android:textSize="40dp"
        android:textColor="@color/string_blue"/>
    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:id="@+id/signup_lo_taikhoan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/signup_tv_sigup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:borderColor="@color/background_yellow"
        >
        <EditText
            android:id="@+id/signup_edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            ></EditText>
    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:id="@+id/signup_lo_matkhau"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/signup_lo_taikhoan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:borderColor="@color/background_yellow"
        >
        <EditText
            android:id="@+id/signup_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            ></EditText>
    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:id="@+id/singup_lo_repassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/signup_lo_matkhau"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:borderColor="@color/background_yellow"
        >
        <EditText
            android:id="@+id/signup_edt_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repassword"
            ></EditText>
    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
    <LinearLayout
        android:id="@+id/lo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/singup_lo_repassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/signup_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/background_yellow"

            />
        <Button
            android:id="@+id/signup_btn_signup"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/background_yellow"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>