<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_drawable">
    <TextView
        android:id="@+id/login_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:textColor="@color/string_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:id="@+id/login_lo_taikhoan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_tv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:borderColor="@color/background_yellow"
        >
        <EditText
            android:id="@+id/lo_edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            ></EditText>
    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:id="@+id/login_lo_matkhau"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_lo_taikhoan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:borderColor="@color/background_yellow"
        >
        <EditText
            android:id="@+id/login_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            ></EditText>
    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
    <TextView
        android:id="@+id/login_tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_lo_matkhau"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textColor="@color/string_blue"
        android:text="@string/forgetpass"
        />
    <LinearLayout
        android:id="@+id/login_lo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_tv_forget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/background_yellow"
            android:background="@color/button_orange"
            />
        <Button
            android:id="@+id/login_btn_signup"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/background_yellow"
            android:background="@color/button_orange"


            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_lo_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textColor="@color/string_blue"
        android:text="@string/guestlogin"
        />


</androidx.constraintlayout.widget.ConstraintLayout>